--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
     url: jdbc:mysql://localhost:3306/trademark?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: Asia/Shanghai
   thymeleaf:
     check-template-location: true #是否检查模板路径是否存在，默认true
     check-template: true #是否检查模板是否存在，默认true
