--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,5 +6,6 @@ spring:
     url: jdbc:mysql://localhost:3306/trademark?useUnicode=true&characterEncoding=utf-8&useSSL=false
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: Asia/Shanghai
 mybatis:
   mapper-locations: mapper/*.xml
