--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
             <artifactId>hutool-all</artifactId>
             <version>5.5.2</version>
         </dependency>
+        <!--上传文件-->
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>2.8.3</version>
+        </dependency>
     </dependencies>
 
     <build>
